Sun Jul 27 01:46:34 2014  Zachary Scott  <e@zzak.io>

	* proc.c (method_super_method): [DOC] Method#super_method

Sun Jul 27 01:22:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_super_method): new method Method#super_method,
	  which returns a method object of the method to be called by
	  `super` in the receiver method object.
	  [ruby-core:62202] [Feature #9781]

Sat Jul 26 17:22:14 2014  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/objspace/objspace_dump.c (dump_append): avoid fflush.

	  because dump_append_string_value() iterates over each chars,
	  fflush()-ing here effectively issues system calls on every single
	  bytes exist in a ruby process.

Sat Jul 26 16:55:18 2014  Eric Wong  <e@80x24.org>

	* iseq.h (struct iseq_compile_data_storage): reduce overhead
	  to 16 bytes (from 32) on 64-bit

Sat Jul 26 16:28:06 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (struct rb_iseq_struct): reduce to 280 bytes
	  (from 288 bytes) on 64-bit

Sat Jul 26 06:44:43 2014  Eric Wong  <e@80x24.org>

	* parse.y (struct parse_params): shrink to 320 to 304 bytes on 64-bit

Sat Jul 26 05:58:35 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h (ZALLOC, ZALLOC_N): implement
	  (Data_Make_Struct, TypedData_Make_Struct):
	  ZALLOC replaces ALLOC+memset
	  [ruby-core:63951][Feature #10082]
	* compile.c (iseq_seq_sequence): ZALLOC_N replaces ALLOC_N+MEMZERO
	* cont.c (fiber_t_alloc): ZALLOC replaces ALLOC+MEMZERO
	* io.c (rb_io_reopen): ditto
	* iseq.c (prepare_iseq_build): ditto
	* parse.y (new_args_tail_gen, parser_new, ripper_s_allocate): ditto
	* re.c (match_alloc): ditto
	* variable.c (rb_const_set): ditto
	* ext/socket/raddrinfo.c (get_addrinfo): ditto
	* ext/strscan/strscan.c (strscan_s_allocate): ditto
	* gc.c (rb_objspace_alloc): calloc replaces malloc+MEMZERO

Sat Jul 26 05:54:54 2014  Eric Wong  <e@80x24.org>

	* symbol.c (dsymbol_check): remove unneeded semi-colon

Fri Jul 25 14:07:27 2014  Koichi Sasada  <ko1@atdot.net>
